--- a/templates/todos.html
+++ b/templates/todos.html
@@ -5,5 +5,6 @@
             <todo-item item="todo" default="todo.default"></todo-item>
         </li>
     <ul>
-    <button rv-on-click="controller.printList">Print List</button>
+    <br>
+    <button class = "btn btn-primary" rv-on-click="controller.printList">Print List</button>
 </div>
